add final touches

--- a/public/options.html
+++ b/public/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Social Comments GPT</title>
+    <title>Social Synth</title>
     <script src="js/vendor.js"></script>
   </head>
   <body>
