--- a/public/popup.html
+++ b/public/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Social Comments GPT</title>
+    <title>Social Synth</title>
     <script src="js/vendor.js"></script>
   </head>
   <body>
